// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SoT locked snapshot > arrabida-boat: rendered content snapshot 1`] = `
{
  "highlights": [
    "Livramento Market and Arrábida Natural Park",
    "Sesimbra Coastal Boat Tour",
    "Lapa de Santa Margarida",
    "Sesimbra fishing town and castle",
    "Cabo Espichel clifftop sanctuary",
  ],
  "included": [
    "Private transportation",
    "Sesimbra Coastal Boat Tour",
    "Private local guide",
    "Pickup and drop-off in Lisbon, Setúbal, Sesimbra or Almada",
    "Bottled water",
    "Air-conditioned vehicle",
  ],
  "itinerary": [
    {
      "description": "Starting point entry.",
      "durationMinutes": 10,
      "label": "Lisbon",
      "optional": false,
      "order": 1,
      "travelToNextMinutes": null,
    },
    {
      "description": "Market stop.",
      "durationMinutes": 45,
      "label": "Mercado do Livramento",
      "optional": false,
      "order": 2,
      "travelToNextMinutes": null,
    },
    {
      "description": "Scenic park route.",
      "durationMinutes": 60,
      "label": "Parque Natural da Arrábida",
      "optional": false,
      "order": 3,
      "travelToNextMinutes": null,
    },
    {
      "description": "Sea cave and chapel.",
      "durationMinutes": 30,
      "label": "Lapa de Santa Margarida",
      "optional": false,
      "order": 4,
      "travelToNextMinutes": null,
    },
    {
      "description": "Castle stop.",
      "durationMinutes": 30,
      "label": "Castelo de Sesimbra",
      "optional": false,
      "order": 5,
      "travelToNextMinutes": null,
    },
    {
      "description": "Sanctuary and cliffs.",
      "durationMinutes": 30,
      "label": "Cabo Espichel",
      "optional": false,
      "order": 6,
      "travelToNextMinutes": null,
    },
    {
      "description": "The Sesimbra Coastal Boat Tour plus time in town; lunch is own expense.",
      "durationMinutes": 240,
      "label": "Sesimbra — Coastal Boat Tour and free time",
      "optional": false,
      "order": 7,
      "travelToNextMinutes": null,
    },
  ],
  "notIncluded": [
    "Lunch — own expense",
    "Personal expenses",
  ],
  "overview": "A private Arrábida and Sesimbra day combining Livramento Market, the natural park, Lapa de Santa Margarida, Sesimbra and the Sesimbra Coastal Boat Tour. Lunch is not included.",
  "source": "sot",
  "tourId": "arrabida-boat",
}
`;

exports[`SoT locked snapshot > arrabida-wine-allinclusive: rendered content snapshot 1`] = `
{
  "highlights": [
    "Two selected wineries included, up to four in Tailor",
    "Wine tastings and regional snacks",
    "Livramento Market and the Azeitão tile factory",
    "Arrábida Natural Park",
    "Optional Cristo Rei or Sesimbra Castle stop",
  ],
  "included": [
    "Two selected wineries based on availability",
    "Wine tastings",
    "Regional snacks",
    "Lunch",
    "Private transportation",
    "Bottled water",
    "Hotel pickup and drop-off",
    "Local certified guide",
    "Livramento Market",
    "Azeitão tile factory",
    "Arrábida Natural Park",
  ],
  "itinerary": [
    {
      "description": "Starting point entry.",
      "durationMinutes": 5,
      "label": "Lisbon",
      "optional": false,
      "order": 1,
      "travelToNextMinutes": null,
    },
    {
      "description": "The route may pass through town.",
      "durationMinutes": null,
      "label": "Sesimbra",
      "optional": false,
      "order": 2,
      "travelToNextMinutes": null,
    },
    {
      "description": "Scenic route.",
      "durationMinutes": 30,
      "label": "Parque Natural da Arrábida",
      "optional": false,
      "order": 3,
      "travelToNextMinutes": null,
    },
    {
      "description": "Winery candidate — two run by default, up to four in Tailor.",
      "durationMinutes": 45,
      "label": "José Maria da Fonseca",
      "optional": true,
      "order": 4,
      "travelToNextMinutes": null,
    },
    {
      "description": "Market.",
      "durationMinutes": 30,
      "label": "Mercado do Livramento",
      "optional": false,
      "order": 5,
      "travelToNextMinutes": null,
    },
    {
      "description": "Village and the included lunch.",
      "durationMinutes": 60,
      "label": "Azeitão",
      "optional": false,
      "order": 6,
      "travelToNextMinutes": null,
    },
    {
      "description": "Winery candidate — two run by default, up to four in Tailor.",
      "durationMinutes": 30,
      "label": "Quinta do Piloto",
      "optional": true,
      "order": 7,
      "travelToNextMinutes": null,
    },
    {
      "description": "Winery candidate — two run by default, up to four in Tailor.",
      "durationMinutes": 30,
      "label": "Adega Cooperativa de Palmela",
      "optional": true,
      "order": 8,
      "travelToNextMinutes": null,
    },
    {
      "description": "Winery candidate — two run by default, up to four in Tailor.",
      "durationMinutes": 45,
      "label": "Bacalhôa",
      "optional": true,
      "order": 9,
      "travelToNextMinutes": null,
    },
    {
      "description": "Tile factory.",
      "durationMinutes": 30,
      "label": "Azulejos de Azeitão",
      "optional": false,
      "order": 10,
      "travelToNextMinutes": null,
    },
    {
      "description": "Winery candidate — two run by default, up to four in Tailor.",
      "durationMinutes": 45,
      "label": "Farm Catralvos",
      "optional": true,
      "order": 11,
      "travelToNextMinutes": null,
    },
    {
      "description": "Optional viewpoint.",
      "durationMinutes": 15,
      "label": "Cristo Rei",
      "optional": true,
      "order": 12,
      "travelToNextMinutes": null,
    },
    {
      "description": "Optional viewpoint.",
      "durationMinutes": 15,
      "label": "Castelo de Sesimbra",
      "optional": true,
      "order": 13,
      "travelToNextMinutes": null,
    },
  ],
  "notIncluded": [
    "Cristo Rei or Sesimbra Castle — optional route stop",
    "Tróia or Comporta pickup — additional supplement, or guest ferry transfer to Setúbal",
  ],
  "overview": "Explore Setúbal, Palmela, Azeitão and Arrábida with two selected wineries, regional snacks and lunch included. In Tailor you can add a third and a fourth winery, or remove lunch.",
  "source": "sot",
  "tourId": "arrabida-wine-allinclusive",
}
`;

exports[`SoT locked snapshot > azeitao-cheese: rendered content snapshot 1`] = `
{
  "highlights": [
    "Private Azeitão cheese workshop",
    "Regional bread, cheeses, jam or chutney and Moscatel",
    "Local winery entrance and tasting",
    "Livramento Market, Azeitão and Sesimbra",
    "Private transfers and air-conditioned transport",
  ],
  "included": [
    "Air-conditioned private transport and fees",
    "Private Azeitão cheese workshop",
    "Toasts and regional bread",
    "Fresh cheese and Azeitão cheese",
    "Homemade jam or chutney",
    "Moscatel wine",
    "Bottled water",
    "Pickup and drop-off in listed service areas",
    "Winery entrance and tasting",
  ],
  "itinerary": [
    {
      "description": "Market and products.",
      "durationMinutes": 90,
      "label": "Mercado do Livramento",
      "optional": false,
      "order": 1,
      "travelToNextMinutes": null,
    },
    {
      "description": "Private Azeitão cheese workshop.",
      "durationMinutes": 90,
      "label": "Quinta Velha — cheese workshop",
      "optional": false,
      "order": 2,
      "travelToNextMinutes": null,
    },
    {
      "description": "Village time and lunch — lunch is own expense.",
      "durationMinutes": 90,
      "label": "Azeitão",
      "optional": false,
      "order": 3,
      "travelToNextMinutes": null,
    },
    {
      "description": "Winery entrance and tasting.",
      "durationMinutes": 120,
      "label": "Farm Catralvos",
      "optional": false,
      "order": 4,
      "travelToNextMinutes": null,
    },
    {
      "description": "Sesimbra and castle block.",
      "durationMinutes": 120,
      "label": "Castelo de Sesimbra",
      "optional": false,
      "order": 5,
      "travelToNextMinutes": null,
    },
    {
      "description": "Panoramic route.",
      "durationMinutes": null,
      "label": "Cristo Rei",
      "optional": false,
      "order": 6,
      "travelToNextMinutes": null,
    },
    {
      "description": "Return route.",
      "durationMinutes": null,
      "label": "25 de Abril Bridge",
      "optional": false,
      "order": 7,
      "travelToNextMinutes": null,
    },
  ],
  "notIncluded": [
    "Lunch — own expense",
    "Tróia or Comporta pickup — additional pickup supplement, or guest ferry transfer to Setúbal",
  ],
  "overview": "Visit Livramento Market, join a private Azeitão cheese workshop with regional tastings, explore Azeitão, taste wine at a local winery and continue to Sesimbra. Lunch is not included.",
  "source": "sot",
  "tourId": "azeitao-cheese",
}
`;

exports[`SoT locked snapshot > evora-alentejo: rendered content snapshot 1`] = `
{
  "highlights": [
    "Évora UNESCO historic centre",
    "Roman Temple and Chapel of Bones",
    "Two selected Alentejo winery visits and tastings",
    "Local cheeses and cured meats",
    "Traditional cork production site",
  ],
  "included": [
    "Private accommodation pickup and drop-off",
    "Dedicated local guide or host",
    "Évora and Chapel of Bones entrance fees",
    "Two selected winery visits and tastings",
    "Local cheese and cured-meat tastings",
    "Traditional cork production site visit",
    "Bottled water",
    "Traditional restaurant reservation or recommendation",
  ],
  "itinerary": [
    {
      "description": "Outbound route.",
      "durationMinutes": null,
      "label": "25 de Abril Bridge",
      "optional": false,
      "order": 1,
      "travelToNextMinutes": null,
    },
    {
      "description": "Winery candidate — two wineries run in total.",
      "durationMinutes": 90,
      "label": "João Portugal Ramos",
      "optional": true,
      "order": 2,
      "travelToNextMinutes": null,
    },
    {
      "description": "Winery candidate — two wineries run in total.",
      "durationMinutes": 90,
      "label": "Cartuxa",
      "optional": true,
      "order": 3,
      "travelToNextMinutes": null,
    },
    {
      "description": "Winery candidate — two wineries run in total.",
      "durationMinutes": 90,
      "label": "Pêra-Grave",
      "optional": true,
      "order": 4,
      "travelToNextMinutes": null,
    },
    {
      "description": "Winery candidate — two wineries run in total.",
      "durationMinutes": 90,
      "label": "Ervideira",
      "optional": true,
      "order": 5,
      "travelToNextMinutes": null,
    },
    {
      "description": "Winery candidate — two wineries run in total.",
      "durationMinutes": 120,
      "label": "Herdade do Esporão",
      "optional": true,
      "order": 6,
      "travelToNextMinutes": null,
    },
    {
      "description": "Évora — entrance included.",
      "durationMinutes": 30,
      "label": "Chapel of Bones",
      "optional": false,
      "order": 7,
      "travelToNextMinutes": null,
    },
    {
      "description": "Walking time.",
      "durationMinutes": 60,
      "label": "Évora historic centre",
      "optional": false,
      "order": 8,
      "travelToNextMinutes": null,
    },
    {
      "description": "Historic monument.",
      "durationMinutes": 10,
      "label": "Roman Temple of Évora",
      "optional": false,
      "order": 9,
      "travelToNextMinutes": null,
    },
    {
      "description": "Cork production visit.",
      "durationMinutes": 30,
      "label": "Corticarte",
      "optional": false,
      "order": 10,
      "travelToNextMinutes": null,
    },
  ],
  "notIncluded": [
    "Lunch — own expense",
  ],
  "overview": "Explore Évora's historic centre, Roman Temple and Chapel of Bones, visit two selected Alentejo wineries for tastings, and see a traditional cork production site. Lunch is not included.",
  "source": "sot",
  "tourId": "evora-alentejo",
}
`;

exports[`SoT locked snapshot > fatima-nazare-obidos: rendered content snapshot 1`] = `
{
  "highlights": [
    "Sanctuary of Fátima",
    "Nazaré viewpoint, beach and fishing town",
    "Óbidos medieval walled town and castle",
    "Ginjinha tasting and local pastry",
    "Private certified guide and transport",
  ],
  "included": [
    "All fees and taxes",
    "Air-conditioned private transportation",
    "Ginjinha tasting",
    "Certified guide",
    "Private pickup and drop-off",
    "Bottled water",
    "Local pastry",
  ],
  "itinerary": [
    {
      "description": "Starting point entry.",
      "durationMinutes": 10,
      "label": "Lisbon",
      "optional": false,
      "order": 1,
      "travelToNextMinutes": null,
    },
    {
      "description": "The Sanctuary of Fátima.",
      "durationMinutes": 120,
      "label": "Fátima",
      "optional": false,
      "order": 2,
      "travelToNextMinutes": null,
    },
    {
      "description": "Town time and meal opportunity — lunch is own expense.",
      "durationMinutes": 120,
      "label": "Nazaré",
      "optional": false,
      "order": 3,
      "travelToNextMinutes": null,
    },
    {
      "description": "Walled town.",
      "durationMinutes": 90,
      "label": "Óbidos",
      "optional": false,
      "order": 4,
      "travelToNextMinutes": null,
    },
    {
      "description": "Beach stop; the giant waves are a seasonal winter phenomenon.",
      "durationMinutes": 30,
      "label": "Praia da Nazaré",
      "optional": false,
      "order": 5,
      "travelToNextMinutes": null,
    },
    {
      "description": "Castle area.",
      "durationMinutes": 60,
      "label": "Castelo de Óbidos",
      "optional": false,
      "order": 6,
      "travelToNextMinutes": null,
    },
  ],
  "notIncluded": [
    "Lunch — own expense",
  ],
  "overview": "Visit the Sanctuary of Fátima, Nazaré's beach and cliff setting — where the Atlantic's giant waves arrive seasonally in winter — and the walled town of Óbidos, finishing with Ginjinha and a local pastry. Lunch is not included.",
  "source": "sot",
  "tourId": "fatima-nazare-obidos",
}
`;

exports[`SoT locked snapshot > roman-heritage-alentejo: rendered content snapshot 1`] = `
{
  "highlights": [
    "São Cucufate Roman archaeological site",
    "Family-run winery using Roman-style clay vessels",
    "Multiple talha wines and traditional winery lunch",
    "Talha Wine Interpretation Center",
    "Private local host, transport and bottled water",
  ],
  "included": [
    "Air-conditioned private transport",
    "Private pickup and drop-off",
    "São Cucufate visit",
    "Talha Wine Interpretation Center visit",
    "Local guided family-winery experience",
    "Multiple Roman-style wines",
    "Traditional Alentejo lunch at the winery",
    "Bottled water",
    "Local guide or host throughout",
  ],
  "itinerary": [
    {
      "description": "Starting point entry.",
      "durationMinutes": 10,
      "label": "Lisbon",
      "optional": false,
      "order": 1,
      "travelToNextMinutes": null,
    },
    {
      "description": "Roman archaeological site.",
      "durationMinutes": 60,
      "label": "Villa Romana de São Cucufate",
      "optional": false,
      "order": 2,
      "travelToNextMinutes": null,
    },
    {
      "description": "Village stop.",
      "durationMinutes": 30,
      "label": "Vila Alva",
      "optional": false,
      "order": 3,
      "travelToNextMinutes": null,
    },
    {
      "description": "Family talha winery, tasting and the included traditional lunch.",
      "durationMinutes": 180,
      "label": "Adega Mestre Daniel / XXVI Talhas",
      "optional": false,
      "order": 4,
      "travelToNextMinutes": null,
    },
    {
      "description": "Published as a full itinerary stop.",
      "durationMinutes": 60,
      "label": "Albergaria dos Fusos",
      "optional": false,
      "order": 5,
      "travelToNextMinutes": null,
    },
    {
      "description": "Interpretive centre.",
      "durationMinutes": 60,
      "label": "Talha Wine Interpretation Center",
      "optional": false,
      "order": 6,
      "travelToNextMinutes": null,
    },
  ],
  "notIncluded": [
    "Personal expenses",
  ],
  "overview": "A private Alentejo day linking São Cucufate's Roman villa, Vila Alva, a family talha winery with a traditional lunch, Albergaria dos Fusos and the Talha Wine Interpretation Center.",
  "source": "sot",
  "tourId": "roman-heritage-alentejo",
}
`;

exports[`SoT locked snapshot > sintra-cascais: rendered content snapshot 1`] = `
{
  "highlights": [
    "Private full-day history, wine and coastal route",
    "Flexible palace selection with expert guide",
    "One palace plus wine tasting, or two palace tickets",
    "Azenhas do Mar, Cabo da Roca and Cascais",
    "Private transport and local pastry",
  ],
  "included": [
    "Private transportation",
    "Air-conditioned vehicle",
    "Bottled water",
    "Certified guide",
    "Pickup and drop-off in Lisbon, Setúbal, Almada or Sesimbra",
    "Local pastry",
  ],
  "itinerary": [
    {
      "description": "Historic town.",
      "durationMinutes": 60,
      "label": "Sintra",
      "optional": false,
      "order": 1,
      "travelToNextMinutes": null,
    },
    {
      "description": "Palace candidate — included when selected.",
      "durationMinutes": 90,
      "label": "Sintra National Palace",
      "optional": true,
      "order": 2,
      "travelToNextMinutes": null,
    },
    {
      "description": "Palace candidate — included when selected.",
      "durationMinutes": 90,
      "label": "Pena Palace",
      "optional": true,
      "order": 3,
      "travelToNextMinutes": null,
    },
    {
      "description": "Clifftop coastal stop and meal opportunity — lunch is own expense.",
      "durationMinutes": 90,
      "label": "Azenhas do Mar",
      "optional": false,
      "order": 4,
      "travelToNextMinutes": null,
    },
    {
      "description": "Palace/monument candidate — included when selected.",
      "durationMinutes": 90,
      "label": "Quinta da Regaleira",
      "optional": true,
      "order": 5,
      "travelToNextMinutes": null,
    },
    {
      "description": "Included with the one-palace-plus-wine package.",
      "durationMinutes": 90,
      "label": "Adega Regional de Colares",
      "optional": false,
      "order": 6,
      "travelToNextMinutes": null,
    },
    {
      "description": "Seaside town.",
      "durationMinutes": 45,
      "label": "Cascais",
      "optional": false,
      "order": 7,
      "travelToNextMinutes": null,
    },
    {
      "description": "Coastal viewpoint.",
      "durationMinutes": 30,
      "label": "Cabo da Roca",
      "optional": false,
      "order": 8,
      "travelToNextMinutes": null,
    },
  ],
  "notIncluded": [
    "Lunch — own expense",
  ],
  "overview": "A private, flexible Sintra and Cascais tour with coastal viewpoints, planned to reduce queues. The included ticket package is either one palace plus the Colares wine visit, or two palace tickets per person.",
  "source": "sot",
  "tourId": "sintra-cascais",
}
`;

exports[`SoT locked snapshot > southwest-vicentine-coast: rendered content snapshot 1`] = `
{
  "highlights": [
    "Ilha do Pessegueiro coastal viewpoint",
    "Porto Covo and Vila Nova de Milfontes",
    "Southwest Alentejo and Vicentine Coast Natural Park",
    "Odeceixe river-meets-ocean landscape",
    "Aljezur and its Moorish-rooted historic setting",
  ],
  "included": [
    "Air-conditioned private transportation with local guide",
    "Private pickup and drop-off",
    "Entrance and transportation fees",
    "Bottled water",
    "Private personalized itinerary",
  ],
  "itinerary": [
    {
      "description": "Departure.",
      "durationMinutes": null,
      "label": "Lisbon",
      "optional": false,
      "order": 1,
      "travelToNextMinutes": null,
    },
    {
      "description": "Coastal viewpoint.",
      "durationMinutes": 25,
      "label": "Ilha do Pessegueiro",
      "optional": false,
      "order": 2,
      "travelToNextMinutes": null,
    },
    {
      "description": "Village.",
      "durationMinutes": 45,
      "label": "Porto Covo",
      "optional": false,
      "order": 3,
      "travelToNextMinutes": null,
    },
    {
      "description": "Town and meal opportunity — meals are own expense.",
      "durationMinutes": 90,
      "label": "Vila Nova de Milfontes",
      "optional": false,
      "order": 4,
      "travelToNextMinutes": null,
    },
    {
      "description": "Protected coastal route.",
      "durationMinutes": 60,
      "label": "Southwest Alentejo & Vicentine Coast Natural Park",
      "optional": false,
      "order": 5,
      "travelToNextMinutes": null,
    },
    {
      "description": "Where the river meets the ocean.",
      "durationMinutes": 90,
      "label": "Odeceixe",
      "optional": false,
      "order": 6,
      "travelToNextMinutes": null,
    },
    {
      "description": "Historic town.",
      "durationMinutes": 60,
      "label": "Aljezur",
      "optional": false,
      "order": 7,
      "travelToNextMinutes": null,
    },
  ],
  "notIncluded": [
    "Meals — own expense",
  ],
  "overview": "Travel privately from Lisbon along Portugal's Southwest Coast, stopping at Ilha do Pessegueiro, Porto Covo, Vila Nova de Milfontes, the natural park, Odeceixe and Aljezur. Meals are not included.",
  "source": "sot",
  "tourId": "southwest-vicentine-coast",
}
`;

exports[`SoT locked snapshot > tiles-workshop: rendered content snapshot 1`] = `
{
  "highlights": [
    "Hands-on azulejo painting workshop",
    "Tile firing and shipping",
    "Selected regional winery tasting",
    "Livramento Market and Sesimbra",
    "Private guide, transport, entrances and cheese tasting",
  ],
  "included": [
    "Private transportation",
    "Bottled water",
    "Certified guide",
    "Air-conditioned vehicle",
    "Wine tasting",
    "Tile-making workshop",
    "Tile shipping",
    "All listed entrances",
    "Cheese tasting",
  ],
  "itinerary": [
    {
      "description": "Departure.",
      "durationMinutes": null,
      "label": "Lisbon",
      "optional": false,
      "order": 1,
      "travelToNextMinutes": null,
    },
    {
      "description": "Market stop.",
      "durationMinutes": 15,
      "label": "Mercado do Livramento",
      "optional": false,
      "order": 2,
      "travelToNextMinutes": null,
    },
    {
      "description": "Castle.",
      "durationMinutes": 20,
      "label": "Castelo de Sesimbra",
      "optional": false,
      "order": 3,
      "travelToNextMinutes": null,
    },
    {
      "description": "Tile workshop.",
      "durationMinutes": 120,
      "label": "Azulejos de Azeitão",
      "optional": false,
      "order": 4,
      "travelToNextMinutes": null,
    },
    {
      "description": "Town time and lunch — lunch is own expense.",
      "durationMinutes": 90,
      "label": "Sesimbra",
      "optional": false,
      "order": 5,
      "travelToNextMinutes": null,
    },
    {
      "description": "Winery candidate — one winery runs.",
      "durationMinutes": 90,
      "label": "José Maria da Fonseca",
      "optional": true,
      "order": 6,
      "travelToNextMinutes": null,
    },
    {
      "description": "Winery candidate — one winery runs.",
      "durationMinutes": 90,
      "label": "Farm Catralvos",
      "optional": true,
      "order": 7,
      "travelToNextMinutes": null,
    },
    {
      "description": "Winery candidate — one winery runs.",
      "durationMinutes": 90,
      "label": "Bacalhôa",
      "optional": true,
      "order": 8,
      "travelToNextMinutes": null,
    },
    {
      "description": "Optional viewpoint — admission is not included.",
      "durationMinutes": 20,
      "label": "Cristo Rei",
      "optional": true,
      "order": 9,
      "travelToNextMinutes": null,
    },
  ],
  "notIncluded": [
    "Lunch — own expense",
    "Cristo Rei admission",
  ],
  "overview": "Paint a Portuguese azulejo in Azeitão, visit the region and Sesimbra, and enjoy a selected winery tasting. Tile shipping, entrances, cheese tasting and private transport are included; lunch is not.",
  "source": "sot",
  "tourId": "tiles-workshop",
}
`;

exports[`SoT locked snapshot > tomar-coimbra: rendered content snapshot 1`] = `
{
  "highlights": [
    "Convento de Cristo and Templar heritage",
    "Tomar historic centre",
    "University of Coimbra",
    "Joanina Library timed entry",
    "Private guide, tickets, transport, water and local pastry",
  ],
  "included": [
    "All fees and taxes",
    "Private transportation",
    "Air-conditioned vehicle",
    "All entrances and tickets",
    "Certified tour guide",
    "Bottled water",
    "Local pastry",
  ],
  "itinerary": [
    {
      "description": "Starting point entry.",
      "durationMinutes": 10,
      "label": "Lisbon",
      "optional": false,
      "order": 1,
      "travelToNextMinutes": null,
    },
    {
      "description": "Templar UNESCO monument.",
      "durationMinutes": 90,
      "label": "Convento de Cristo",
      "optional": false,
      "order": 2,
      "travelToNextMinutes": null,
    },
    {
      "description": "Historic city time.",
      "durationMinutes": 120,
      "label": "Coimbra",
      "optional": false,
      "order": 3,
      "travelToNextMinutes": null,
    },
    {
      "description": "University complex.",
      "durationMinutes": 90,
      "label": "University of Coimbra",
      "optional": false,
      "order": 4,
      "travelToNextMinutes": null,
    },
    {
      "description": "Timed library entry.",
      "durationMinutes": 90,
      "label": "Biblioteca Joanina",
      "optional": false,
      "order": 5,
      "travelToNextMinutes": null,
    },
    {
      "description": "Historic town time.",
      "durationMinutes": 120,
      "label": "Tomar",
      "optional": false,
      "order": 6,
      "travelToNextMinutes": null,
    },
  ],
  "notIncluded": [
    "Lunch — own expense",
  ],
  "overview": "Travel privately from Lisbon to Tomar's Convento de Cristo and historic centre, then continue to Coimbra, its university and the Joanina Library. Lunch is not included.",
  "source": "sot",
  "tourId": "tomar-coimbra",
}
`;

exports[`SoT locked snapshot > troia-comporta: rendered content snapshot 1`] = `
{
  "highlights": [
    "Sado ferry crossing with vehicle and passengers included",
    "Guided Roman Ruins of Tróia visit with admission",
    "Herdade da Comporta wine experience and tasting",
    "Comporta village, Carrasqueira stilt pier and Atlantic beaches",
    "Private local guide and flexible coastal stops",
  ],
  "included": [
    "Private air-conditioned transport",
    "Private local expert guide",
    "Sado ferry for vehicle and passengers",
    "Roman Ruins of Tróia admission",
    "Herdade da Comporta wine experience and tasting",
    "Bottled water",
    "Flexible scenic and hidden-gem stops",
    "Pickup and drop-off in listed service areas",
    "Restaurant and local-experience recommendations",
  ],
  "itinerary": [
    {
      "description": "Brief starting point entry.",
      "durationMinutes": 5,
      "label": "Lisbon",
      "optional": false,
      "order": 1,
      "travelToNextMinutes": null,
    },
    {
      "description": "Vehicle and passenger ferry across the Sado.",
      "durationMinutes": 15,
      "label": "Baía de Setúbal / Sado ferry",
      "optional": false,
      "order": 2,
      "travelToNextMinutes": null,
    },
    {
      "description": "Guided archaeological visit; admission included.",
      "durationMinutes": 45,
      "label": "Roman Ruins of Tróia",
      "optional": false,
      "order": 3,
      "travelToNextMinutes": null,
    },
    {
      "description": "Short marina stop.",
      "durationMinutes": 15,
      "label": "Marina de Tróia",
      "optional": false,
      "order": 4,
      "travelToNextMinutes": null,
    },
    {
      "description": "Stilt fishing pier.",
      "durationMinutes": 20,
      "label": "Cais Palafítico da Carrasqueira",
      "optional": false,
      "order": 5,
      "travelToNextMinutes": null,
    },
    {
      "description": "Village and lunch time — lunch is own expense.",
      "durationMinutes": 95,
      "label": "Comporta",
      "optional": false,
      "order": 6,
      "travelToNextMinutes": null,
    },
    {
      "description": "Wine experience and tasting.",
      "durationMinutes": 95,
      "label": "Herdade da Comporta",
      "optional": false,
      "order": 7,
      "travelToNextMinutes": null,
    },
    {
      "description": "Coastal stop.",
      "durationMinutes": 15,
      "label": "Praia do Carvalhal",
      "optional": false,
      "order": 8,
      "travelToNextMinutes": null,
    },
    {
      "description": "Coastal stop.",
      "durationMinutes": 15,
      "label": "Comporta Beach",
      "optional": false,
      "order": 9,
      "travelToNextMinutes": null,
    },
  ],
  "notIncluded": [
    "Lunch — own expense",
  ],
  "overview": "Cross the Sado by ferry, visit the Roman fish-salting ruins of Tróia, explore Comporta and its Atlantic beaches, and taste wine at Herdade da Comporta. Lunch is not included.",
  "source": "sot",
  "tourId": "troia-comporta",
}
`;

exports[`SoT locked snapshot > wild-beaches-picnic: rendered content snapshot 1`] = `
{
  "highlights": [
    "Arrábida Natural Park and coastal viewpoints",
    "Galapinhos, Bicas and Meco-area beaches",
    "Private picnic with regional products",
    "Livramento Market, Lapa de Santa Margarida and Sesimbra",
    "Private guide and door-to-door transport",
  ],
  "included": [
    "Private transportation",
    "Air-conditioned vehicle",
    "Private picnic with local cheeses, bread, smoked meats, pastries, fruit, wine, juice and water",
    "Bottled water",
    "All fees and taxes",
    "Local certified guide",
    "Private pickup and drop-off in Lisbon, Setúbal, Almada or Sesimbra",
  ],
  "itinerary": [
    {
      "description": "Departure.",
      "durationMinutes": null,
      "label": "Lisbon",
      "optional": false,
      "order": 1,
      "travelToNextMinutes": null,
    },
    {
      "description": "Scenic route.",
      "durationMinutes": 60,
      "label": "Parque Natural da Arrábida",
      "optional": false,
      "order": 2,
      "travelToNextMinutes": null,
    },
    {
      "description": "Coastal stop.",
      "durationMinutes": 30,
      "label": "Portinho da Arrábida",
      "optional": false,
      "order": 3,
      "travelToNextMinutes": null,
    },
    {
      "description": "Picnic products and market.",
      "durationMinutes": 30,
      "label": "Mercado do Livramento",
      "optional": false,
      "order": 4,
      "travelToNextMinutes": null,
    },
    {
      "description": "Sea cave and chapel.",
      "durationMinutes": 30,
      "label": "Lapa de Santa Margarida",
      "optional": false,
      "order": 5,
      "travelToNextMinutes": null,
    },
    {
      "description": "Fishing town.",
      "durationMinutes": 30,
      "label": "Sesimbra",
      "optional": false,
      "order": 6,
      "travelToNextMinutes": null,
    },
    {
      "description": "Sanctuary and cliffs.",
      "durationMinutes": 40,
      "label": "Cabo Espichel",
      "optional": false,
      "order": 7,
      "travelToNextMinutes": null,
    },
    {
      "description": "Beach option, chosen on the day.",
      "durationMinutes": 60,
      "label": "Praia das Bicas",
      "optional": true,
      "order": 8,
      "travelToNextMinutes": null,
    },
    {
      "description": "Beach option, chosen on the day.",
      "durationMinutes": 60,
      "label": "Praia do Meco",
      "optional": true,
      "order": 9,
      "travelToNextMinutes": null,
    },
    {
      "description": "Coastal route.",
      "durationMinutes": null,
      "label": "Praia da Foz",
      "optional": false,
      "order": 10,
      "travelToNextMinutes": null,
    },
    {
      "description": "Lagoon route.",
      "durationMinutes": null,
      "label": "Lagoa de Albufeira",
      "optional": false,
      "order": 11,
      "travelToNextMinutes": null,
    },
    {
      "description": "Beach option, chosen on the day.",
      "durationMinutes": 60,
      "label": "Praia de Galapinhos",
      "optional": true,
      "order": 12,
      "travelToNextMinutes": null,
    },
    {
      "description": "Castle.",
      "durationMinutes": 30,
      "label": "Castelo de Sesimbra",
      "optional": false,
      "order": 13,
      "travelToNextMinutes": null,
    },
    {
      "description": "Return panorama.",
      "durationMinutes": null,
      "label": "Cristo Rei",
      "optional": false,
      "order": 14,
      "travelToNextMinutes": null,
    },
    {
      "description": "Return route.",
      "durationMinutes": null,
      "label": "25 de Abril Bridge",
      "optional": false,
      "order": 15,
      "travelToNextMinutes": null,
    },
  ],
  "notIncluded": [],
  "overview": "A private 7.5-hour coastal route through Arrábida, Sesimbra and the Meco area, including a regional picnic and a flexible selection of beaches and viewpoints according to conditions.",
  "source": "sot",
  "tourId": "wild-beaches-picnic",
}
`;
